--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     ports:
       - 27017:27017
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: mchemwotie
+      ME_CONFIG_MONGODB_ADMINUSERNAME: Mchemwotie
       ME_CONFIG_MONGODB_ADMINPASSWORD: Cheplenge#!38
       ME_CONFIG_MONGODB_URL: mongodb+srv://mchemwotie:Cheplenge#!38@products.wmkaz.mongodb.net/yolomy?retryWrites=true&w=majority
   
